Pull in what we can of TinySetup

--- a/site.yml
+++ b/site.yml
@@ -14,3 +14,13 @@
         - git
         - tmux
 
+  #role:tinysetup
+  - name: Install utils from TinySetup
+    apt:
+      name:
+        - vim
+        - mpich
+        - xboxdrv
+        - libglew-dev
+        - sshpass
+
