--- a/site.yml
+++ b/site.yml
@@ -79,3 +79,21 @@
       src: /home/pi/mpihostsfile
       dest: /home/pi/pi_mpihostsfile
       state: soft
+
+  #role:startsph
+  - name: Init - install custom startsph script used to start simulations
+    template:
+      src: startsph.j2
+      dest: /home/pi/startsph
+      owner: pi
+      group: pi
+      mode: 0755
+
+  #role:demo-SPH
+  - name: SPH - Install custom makefile
+    template:
+      src: demo-SPH/makefile.j2
+      dest: /home/pi/SPH/makefile
+      owner: pi
+      group: pi
+      mode: 0644
