Finish up inital ds4 support

--- a/dualshock/ds4drv.conf
+++ b/dualshock/ds4drv.conf
@@ -6,16 +6,16 @@
 ##
 [ds4drv]
 # Run ds4drv in background as a daemon
-#daemon = true
-
+daemon = true
 # Location of the log file in daemon mode
-#daemon-log = ~/.cache/ds4drv.log
+
+daemon-log = ~/ds4drv.log
 
 # Location of the PID file in daemon mode
 #daemon-pid = /tmp/ds4drv.pid
 
 # Enable hidraw mode
-#hidraw = true
+hidraw = true
 
 
 ##
@@ -33,42 +33,16 @@
 ##
 [controller:1]
 # Enables LED flash on low battery
-#battery-flash = true
+battery-flash = true
 
 # Sets LED color
-#led = 0000ff
-
-# Enables profile switching
-#profile-toggle = PS
-
-# Profiles to cycle through
-#profiles = xpad,kbmouse
-
-
-##
-# Profiles
-#
-# Profiles allows switching controller settings during runtime.
-#
-# Profile sections always require a name and are then enabled on a controller
-# with "profiles = <profile1>[,<profile2>]".
-#
-# The same settings available for controllers are used here.
-##
-[profile:xpad]
 led = ff0000
-# Emulate the same button mapping as wired Xbox 360 controllers
-emulate-xpad = true
-
-[profile:kbmouse]
-led = 00ff00
 # Enable trackpad mouse
 trackpad-mouse = true
 # Custom button mapping
 mapping = keyboard
 # Custom action bindings
 bindings = exec_stuff
-
 
 ##
 # Mappings
@@ -84,40 +58,45 @@ bindings = exec_stuff
 ##
 
 [mapping:keyboard]
-# General button to key mapping
+# Directional pad
 KEY_UP = dpad_up
 KEY_LEFT = dpad_left
 KEY_DOWN = dpad_down
 KEY_RIGHT = dpad_right
-KEY_Z = button_cross
-KEY_X = button_circle
 
-# Turn analog stick directions into buttons
-KEY_W = -left_analog_y
-KEY_A = -left_analog_x
-KEY_S = +left_analog_y
-KEY_D = +left_analog_x
+# Face buttons
+KEY_A = button_cross
+KEY_B = button_circle
+KEY_X = button_square
+KEY_Y = button_triangle
 
-# Map relative mouse movement to a analog stick
-REL_X = right_analog_x
-REL_Y = right_analog_y
+# Map relative mouse movement to an analog stick
+REL_X = left_analog_x
+REL_Y = left_analog_y
 
-# Map mouse buttons
-BTN_LEFT = button_r2
-BTN_RIGHT = button_l2
+# Map relative mousewheel movement to a analog stick
+REL_WHEEL = right_analog_y
 
-# Emulate mouse wheel on r1 and l1
-REL_WHEELUP = button_l1
-REL_WHEELDOWN = button_r1
+# Shoulder buttons change number of threads
+KEY_PAGEUP = button_l1
+KEY_PAGEDOWN = button_r1
+
+# Triggers toggle stuff
+KEY_L = button_l2
+BTN_FORWARD = button_r2
+
+# Share button to open menu
+# Options button to pause simulation.
+KEY_TAB = button_share 
+KEY_ESC = button_options
 
 # Mouse settings
-#mouse_sensitivity = 0.6
-#mouse_deadzone = 5
+mouse_sensitivity = 2.0
+mouse_deadzone = 5
 
 # Scroll wheel emulation settings (values are in seconds)
-#mouse_scroll_repeat_delay = 0.25 # How long to wait before continual scrolling
-#mouse_scroll_delay = 0.05 # Lower this to scroll faster; raise to scroll slower
-
+mouse_scroll_repeat_delay = 0.00 # How long to wait before continual scrolling
+mouse_scroll_delay = 1.2 # Lower this to scroll faster; raise to scroll slower
 
 ##
 # Bindings
@@ -156,19 +135,12 @@ REL_WHEELDOWN = button_r1
 ##
 
 [bindings]
-# Cycle profiles
-#PS+Right = next-profile
-#PS+Left = prev-profile
-
-# Go directly to specified profile
-#PS+Up = load-profile kbmouse
-#PS+Down = load-profile default
-
 
 [bindings:exec_stuff]
 # Execute a command in the foreground, blocking until it has finished
-PS+Cross = exec echo '$name'
+#PS+Cross = exec echo '$name'
 
 # Execute a command in the background
-PS+Triangle = exec-background sh -c 'echo "disconnect $device_addr" | bluetoothctl'
+#PS+Triangle = exec-background sh -c 'echo "disconnect $device_addr" | bluetoothctl'
 
+PS = exec-background /home/pi/startsph
